# geovector

./: .gitignore  pyproject.toml
geovector/: __init__.py
geovector/io/: __init__.py  _vector_io.py
geovector/landclassifer/: classifier.py
