[tool.poetry]
name = "geovector"
version = "0.1.0"
description = ""
authors = ["Tuyen Ha Van <tuyenmassey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.0.1"
pyogrio = "^0.10.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
